--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -18,17 +18,17 @@
                     <img src="assets/contact_2.png" alt="Contac phone" class="w-4/5 my-3 block md:hidden mx-auto">
                     <p class="text-xl text-center md:text-left mx-10 md:mx-0 my-5 md:my-12 md:px-4">If you need help I'll be glad to help you, write me!</p>
                     <div class="flex flex-col md:flex-row justify-center items-center bg-gray-100 md:bg-transparent py-3 md:py-0">
-                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5">
+                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5 transform hover:scale-110 motion-reduce:transform-none">
                             <a href="https://twitter.com/Fabian_2817" target="_blank">
                                 <img src="assets/twitter.png" alt="Twitter" class="shadow-md md:shadow-none">
                             </a>
                         </div>
-                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5">
+                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5 transform hover:scale-110 motion-reduce:transform-none">
                             <a href="https://www.instagram.com/_fabian.cr/" target="_blank">
                                 <img src="assets/instagram.png" alt="Instagram" class="shadow-md md:shadow-none">
                             </a>
                         </div>
-                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5">
+                        <div class="mx-0 md:mx-2 my-4 md:my-0 w-4/5 transform hover:scale-110 motion-reduce:transform-none">
                             <a href="https://www.facebook.com/fabian.cristancho.3" target="_blank">
                                 <img src="assets/facebook.png" alt="Facebook" class="shadow-md md:shadow-none">
                             </a>
