--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,21 +1,21 @@
-<div class="flex flex-col-reverse md:flex-row md:justify-center h-screen">
+<div class="flex flex-col-reverse md:flex-row md:justify-center md:h-screen">
   <div class="flex flex-col justify-center items-center flex-1 pt-10 md:pt-0 md:h-screen bg-yellow-400 md:bg-white">
     <a [routerLink]="['/home']" class="hidden sm:block self-start ml-20 mt-10">
       <i class="fas fa-comment-dollar text-6xl text-yellow-600"></i>
     </a>
-    <div class="flex flex-col md:flex-grow justify-center md:-mt-9">
-      <h1 class="main text-xl text-center md:text-left md:text-6xl md:mx-6 px-3 md:px-10 text-yellow-900">Awesome Convert Currency Is My <strong>Passion</strong> </h1>
-      <div class="flex justify-center md:justify-start my-6 px-10 md:px-20 w-full">
-        <button class="px-3 md:px-7 py-2 md:py-3 border rounded-lg bg-green-600 hover:bg-green-700 text-md text-white mr-3" (click)="convertRoute()">
+    <div class="flex flex-col md:flex-grow justify-between md:justify-center md:-mt-9 h-screen">
+      <h1 class="main text-xl text-center md:text-left md:text-6xl md:mx-6 px-3 md:px-10 text-yellow-900 mt-10 md:mt-0">Awesome Convert Currency Is My <strong>Passion</strong> </h1>
+      <div class="flex flex-col md:flex-row justify-center items-center md:items-start md:justify-start my-6 px-10 md:px-20 w-full">
+        <button class="px-3 md:px-7 py-2 md:py-3 border rounded-lg bg-green-600 hover:bg-green-700 text-md text-white my-6 md:my-0 md:mr-3 w-full md:w-auto" (click)="convertRoute()">
           <i class="fas fa-hand-holding-usd text-xl"></i>
           Convert
         </button>
-        <button class="px-3 md:px-7 py-2 md:py-3 border rounded-lg bg-green-400 hover:bg-green-500 text-md text-green-800" (click)="getCurrencies()">
+        <button class="px-3 md:px-7 py-2 my-6 md:my-0 md:py-3 border rounded-lg bg-green-400 hover:bg-green-500 text-md text-green-800 w-full md:w-auto" (click)="getCurrencies()">
           <i class="fas fa-coins text-xl text-green-800"></i>
           Currencies
         </button>
       </div>
-      <div class="absolute bottom-0 left-0 w-full md:w-1/2">
+      <div class="md:absolute md:bottom-0 md:left-0 w-full md:w-1/2">
         <app-footer></app-footer>
       </div>
     </div>
